--- a/src/views/manage-return.ejs
+++ b/src/views/manage-return.ejs
@@ -1,3 +1,5 @@
+<%- include('_partials/header') %>
+
 <main>
 
     <section>
@@ -12,3 +14,5 @@
     </section>
 
 </main>
+
+<%- include('_partials/footer') %>
