--- a/src/views/_partials/footer.ejs
+++ b/src/views/_partials/footer.ejs
@@ -4,7 +4,7 @@
         </div>
     </footer>
 
-    <script src="/main.js"></script>
+    <script type="module" src="/Main.js"></script>
     <script src="https://unpkg.com/flowbite@3.1.2/dist/flowbite.js"></script>
 </body>
 </html>
