--- a/src/views/add-product.ejs
+++ b/src/views/add-product.ejs
@@ -2,7 +2,7 @@
 
 <main>
 
-    <section>
+    <section data-component="AddProduct">
         <div class="container mx-auto py-8 text-center">
             <h1>Ajouter un produit</h1>
             <h2><%= message %></h2>
@@ -11,6 +11,10 @@
                 quibusdam doloribus beatae cumque, provident modi non minima ipsum incidunt delectus voluptates, error
                 aliquam! Ipsa, vitae!</p>
         </div>
+    </section>
+
+    <section>
+        
     </section>
 
 </main>
