--- a/src/views/search-product.ejs
+++ b/src/views/search-product.ejs
@@ -16,7 +16,7 @@
                 <form id="searchForm" class="max-w-md mx-auto">
                     <div id="errorMessage" class="text-red-600 font-semibold"></div>
                     <div class="mb-4">
-                        <label for="productNameInput" class="block text-white text-sm font-bold mb-2">Nom du produit</label>
+                        <label for="productNameInput" class="block text-white text-sm font-bold mb-2">Nom ou ID du produit</label>
                         <input type="text" id="productNameInput" name="productNameInput"
                             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                             required>
@@ -32,9 +32,9 @@
                         <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">
                             <span id="productName">Faite une recherche</span>
                         </h5>
-                        <a href="#" class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
+                        <div class="text-sm font-medium text-blue-600 dark:text-blue-500">
                             <span id="productCategory">Catégorie</span>
-                        </a>
+                        </div>
                     </div>
                     <div class="flow-root">
                         <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
