--- a/src/views/record-sale.ejs
+++ b/src/views/record-sale.ejs
@@ -4,7 +4,8 @@
 
     <section>
         <div class="container mx-auto py-8 text-center">
-            <h1>Enregistrer une vente</h1>
+            <h1 class="text-3xl font-bold underline mb-4">
+                Enregistrer une vente</h1>
             <h2><%= message %></h2>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita cum harum, repudiandae asperiores eius
