--- a/src/views/_partials/header.ejs
+++ b/src/views/_partials/header.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/output.css" rel="stylesheet">
   <title><%= title %></title>
+  <link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body>
 
