--- a/src/views/search-product.ejs
+++ b/src/views/search-product.ejs
@@ -4,7 +4,8 @@
 
         <section>
             <div class="container mx-auto py-8 text-center">
-                <h1>Rechercher un produit</h1>
+                <h1 class="text-3xl font-bold underline mb-4">
+                    Rechercher un produit</h1>
                 <h2>
                     <%= message %>
                 </h2>
@@ -13,7 +14,7 @@
 
         <section data-component="SearchProduct" class="bg-gray-50 dark:bg-gray-900 py-8">
             <div class="container mx-auto py-8">
-                <form id="searchForm" class="max-w-md mx-auto">
+                <form id="searchProductForm" class="max-w-md mx-auto">
                     <div id="errorMessage" class="text-red-600 font-semibold"></div>
                     <div class="mb-4">
                         <label for="productNameInput" class="block text-white text-sm font-bold mb-2">Nom ou ID du produit</label>
