Add Record Sale

--- a/src/views/record-sale.ejs
+++ b/src/views/record-sale.ejs
@@ -1,19 +1,67 @@
 <%- include('_partials/header') %>
 
-<main>
+    <main>
 
-    <section>
-        <div class="container mx-auto py-8 text-center">
-            <h1 class="text-3xl font-bold underline mb-4">
-                Enregistrer une vente</h1>
-            <h2><%= message %></h2>
+        <section>
+            <div class="container mx-auto py-8 text-center">
+                <h1 class="text-3xl font-bold underline mb-4">
+                    Enregistrer une vente</h1>
+                <h2>
+                    <%= message %>
+                </h2>
+            </div>
+        </section>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita cum harum, repudiandae asperiores eius
-                quibusdam doloribus beatae cumque, provident modi non minima ipsum incidunt delectus voluptates, error
-                aliquam! Ipsa, vitae!</p>
-        </div>
-    </section>
 
-</main>
+        <section data-component="RecordSale" class="bg-gray-50 dark:bg-gray-900 py-8">
 
-<%- include('_partials/footer') %>
+            <form id="recordSaleForm" class="max-w-xs mx-auto">
+                <div id="errorMessage" class="text-red-600 font-semibold"></div>
+                <div id="successMessage" class="text-green-600 font-semibold"></div>
+                <p id="helper-text-explanation" class="mt-2 text-sm text-gray-500 dark:text-gray-400">
+                    Choisir les items achetés</p>
+                <% stock.forEach(item=> { %>
+                <div class="flex flex-row">
+                    <label for="<%= item.id %>-input"
+                        class="basis-1/2 flex items-center mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                        <%= item.name %>:
+                    </label>
+                    <div class="basis-1/2 relative flex items-center max-w-[11rem] mb-4">
+                        <button type="button" id="decrement-button"
+                            data-input-counter-decrement="<%= item.id %>-input"
+                            class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-s-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
+                            <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 2">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M1 1h16" />
+                            </svg>
+                        </button>
+                        <input type="text" id="<%= item.id %>-input" data-input-counter data-input-counter-min="0"
+                            data-input-counter-max="<%= item.stock %>" aria-describedby="helper-text-explanation"
+                            class="bg-gray-50 border-x-0 border-gray-300 h-11 font-medium text-center text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            placeholder="" value="0" required />
+                        <button type="button" id="increment-button"
+                            data-input-counter-increment="<%= item.id %>-input"
+                            class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-e-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
+                            <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M9 1v16M1 9h16" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <% }) %>
+
+                <button type="submit" id="recordSaleButton"
+                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                    Confirmer la vente
+                </button>
+
+            </form>
+
+        </section>
+
+    </main>
+
+    <%- include('_partials/footer') %>
