--- a/src/views/services/view-stock.ejs
+++ b/src/views/services/view-stock.ejs
@@ -1,4 +1,4 @@
-<%- include('_partials/header') %>
+<%- include('../_partials/header') %>
 
 <main>
 
@@ -160,4 +160,4 @@
 
 </main>
 
-<%- include('_partials/footer') %>
+<%- include('../_partials/footer') %>
