--- a/src/views/services/add-product.ejs
+++ b/src/views/services/add-product.ejs
@@ -1,4 +1,4 @@
-<%- include('_partials/header') %>
+<%- include('../_partials/header') %>
 
 <main>
 
@@ -36,4 +36,4 @@
 
 </main>
 
-<%- include('_partials/footer') %>
+<%- include('../_partials/footer') %>
