--- a/src/views/services/record-sale.ejs
+++ b/src/views/services/record-sale.ejs
@@ -1,4 +1,4 @@
-<%- include('_partials/header') %>
+<%- include('../_partials/header') %>
 
     <main>
 
@@ -64,4 +64,4 @@
 
     </main>
 
-    <%- include('_partials/footer') %>
+    <%- include('../_partials/footer') %>
