--- a/src/views/_partials/header.ejs
+++ b/src/views/_partials/header.ejs
@@ -13,6 +13,7 @@
 
 <body>
 
+    <% if (currentStore?.name) { %>
     <header>
         <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
             <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
@@ -73,8 +74,8 @@
                     <div id="dropdownMenu2" class="hidden z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow">
                         <ul class="py-1 text-sm text-gray-700" aria-labelledby="dropdownButton2">
                             <li>
-                                <form action="/logout" method="POST" style="margin:0;">
-                                    <button type="submit" class="block px-4 py-2 hover:bg-gray-100">
+                                <form action="/logout" method="POST">
+                                    <button type="submit" class="block px-4 py-2 hover:bg-gray-100 w-100 text-left">
                                         Déconnexion
                                     </button>
                                 </form>
@@ -118,3 +119,4 @@
             </div>
         </nav>
     </header>
+    <% } %>
