--- a/src/views/services/view-stock.ejs
+++ b/src/views/services/view-stock.ejs
@@ -94,15 +94,15 @@
                         </tr>
                     </thead>
                     <tbody>
-                              <% stock.forEach(item => { %>
+                              <% stock.forEach(inventory => { %>
                         <tr class="border-b dark:border-gray-700">
                             <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                <%= item.id %></th>
+                                <%= inventory.product.id %></th>
                                 <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                <%= item.name %></th>
-                            <td class="px-4 py-3"><%= item.category %></td>
-                            <td class="px-4 py-3"><%= item.price %></td>
-                            <td class="px-4 py-3"><%= item.stock %></td>
+                                <%= inventory.product.name %></th>
+                            <td class="px-4 py-3"><%= inventory.product.category %></td>
+                            <td class="px-4 py-3"><%= inventory.product.price %></td>
+                            <td class="px-4 py-3"><%= inventory.stock %></td>
                             <td class="px-4 py-3 flex items-center justify-end">
                                 <button id="apple-imac-27-dropdown-button" data-dropdown-toggle="apple-imac-27-dropdown" class="inline-flex items-center p-0.5 text-sm font-medium text-center text-gray-500 hover:text-gray-800 rounded-lg focus:outline-none dark:text-gray-400 dark:hover:text-gray-100" type="button">
                                     <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
