--- a/src/views/services/record-sale.ejs
+++ b/src/views/services/record-sale.ejs
@@ -20,15 +20,15 @@
                 <div id="successMessage" class="text-green-600 font-semibold"></div>
                 <p id="helper-text-explanation" class="mt-2 text-sm text-gray-500 dark:text-gray-400">
                     Choisir les items achetés</p>
-                <% stock.forEach(item=> { %>
+                <% stock.forEach(inventory=> { %>
                 <div class="flex flex-row">
-                    <label for="<%= item.id %>-input"
+                    <label for="<%= inventory.product.id %>-input"
                         class="basis-1/2 flex items-center mb-2 text-sm font-medium text-gray-900 dark:text-white">
-                        <%= item.name %>:
+                        <%= inventory.product.name %>:
                     </label>
                     <div class="basis-1/2 relative flex items-center max-w-[11rem] mb-4">
                         <button type="button" id="decrement-button"
-                            data-input-counter-decrement="<%= item.id %>-input"
+                            data-input-counter-decrement="<%= inventory.product.id %>-input"
                             class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-s-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
                             <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 2">
@@ -36,12 +36,12 @@
                                     stroke-width="2" d="M1 1h16" />
                             </svg>
                         </button>
-                        <input type="text" id="<%= item.id %>-input" data-input-counter data-input-counter-min="0"
-                            data-input-counter-max="<%= item.stock %>" aria-describedby="helper-text-explanation"
+                        <input type="text" id="<%= inventory.product.id %>-input" data-input-counter data-input-counter-min="0"
+                            data-input-counter-max="<%= inventory.stock %>" aria-describedby="helper-text-explanation"
                             class="bg-gray-50 border-x-0 border-gray-300 h-11 font-medium text-center text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             placeholder="" value="0" required />
                         <button type="button" id="increment-button"
-                            data-input-counter-increment="<%= item.id %>-input"
+                            data-input-counter-increment="<%= inventory.product.id %>-input"
                             class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-e-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
                             <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18">
