Add version api

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -23,7 +23,7 @@
             Magasin sélectionné : <%= currentStore.name %>
           </h2>
 
-          <form action="/services/rapport" method="GET" style="display:inline;">
+          <form action="/api/v1/rapport" method="GET" style="display:inline;">
             <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded">
               Générer le rapport global
             </button>
