--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -20,7 +20,7 @@
         <div class="container mx-auto py-8 text-center">
 
           <h2 class="text-3xl font-bold underline mb-4">
-            Magasin sélectionné : <%= currentStore.name %>
+            Tableau de bord de la <%= currentStore.name %>
           </h2>
 
           <form action="/api/v1/rapport" method="GET" style="display:inline;">
