--- a/src/views/services/view-stock.ejs
+++ b/src/views/services/view-stock.ejs
@@ -88,6 +88,7 @@
                             <th scope="col" class="px-4 py-3">Catégorie</th>
                             <th scope="col" class="px-4 py-3">Prix</th>
                             <th scope="col" class="px-4 py-3">Stock</th>
+                            <th scope="col" class="px-4 py-3">Stock central</th>
                             <th scope="col" class="px-4 py-3">
                                 <span class="sr-only">Actions</span>
                             </th>
@@ -103,6 +104,11 @@
                             <td class="px-4 py-3"><%= inventory.product.category %></td>
                             <td class="px-4 py-3"><%= inventory.product.price %></td>
                             <td class="px-4 py-3"><%= inventory.stock %></td>
+                            <td class="px-4 py-3">
+                                <% const mainStock=mainStoreStock.find(ms=> ms.product.id ===
+                                    inventory.product.id); %>
+                                    <%= mainStock ? mainStock.stock : 0 %>
+                            </td>
                             <td class="px-4 py-3 flex items-center justify-end">
                                 <button id="apple-imac-27-dropdown-button" data-dropdown-toggle="apple-imac-27-dropdown" class="inline-flex items-center p-0.5 text-sm font-medium text-center text-gray-500 hover:text-gray-800 rounded-lg focus:outline-none dark:text-gray-400 dark:hover:text-gray-100" type="button">
                                     <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
