Add Dashboard + Update UML

--- a/src/views/_partials/header.ejs
+++ b/src/views/_partials/header.ejs
@@ -60,6 +60,11 @@
                                     Consulter le stock</a>
                             </li>
                         </ul>
+                        <div class="py-1">
+                            <a href="/services"
+                                class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
+                                Tous les services</a>
+                        </div>
                     </div>
 
                     <button id="dropdownButton2" data-dropdown-toggle="dropdownMenu2"
