Add frontend products + register

--- a/frontend/src/views/home.ejs
+++ b/frontend/src/views/home.ejs
@@ -6,8 +6,20 @@
       <div class="container mx-auto py-8 text-center">
 
         <h1 class="text-3xl font-bold underline mb-4">
-          Bienvenue sur le site e-commerce
+          Bienvenue sur la page d'accueil
         </h1>
+
+        <a href="/shop" class="inline-flex items-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+          Accéder au Shop
+        </a>
+
+        <a href="/shop/produits" class="inline-flex items-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+          Voir les produits
+        </a>
+
+        <a href="/dashboard" class="inline-flex items-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+          Voir le tableau de bord
+        </a>
 
       </div>
     </section>
