--- a/frontend/src/views/auth/login.ejs
+++ b/frontend/src/views/auth/login.ejs
@@ -8,6 +8,11 @@
                     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                         Connectez-vous à votre compte
                     </h1>
+                    <% if (error) { %>
+                        <div class="text-red-500 text-sm mb-4">
+                            <%= error %>
+                        </div>
+                    <% } %>
                     <form class="space-y-4 md:space-y-6" action="/login" method="POST">
                         <div>
                             <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
@@ -18,14 +23,17 @@
                             <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Mot de passe</label>
                             <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
                         </div>
-                        <label for="storeId" class="text-md font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">Sélectionner un magasin</label>
-                        <select id="storeId" name="storeId" required class="select select-bordered w-full rounded-lg">
-                            <% stores.forEach(function(store) { %>
-                                <option value="<%= store.id %>">
-                                    <%= store.name %>
-                                </option>
-                            <% }); %>
-                        </select>
+                        <div>
+                            <label for="storeId" class="mt-4 mb-2 text-md font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+                                Sélectionner un magasin</label>
+                            <select id="storeId" name="storeId" required class="select select-bordered w-full rounded-lg">
+                                <% stores.forEach(function(store) { %>
+                                    <option value="<%= store.id %>">
+                                        <%= store.name %>
+                                    </option>
+                                <% }); %>
+                            </select>
+                        </div>
                         <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
                             Se connecter</button>
                         <p class="text-sm font-light text-gray-500 dark:text-gray-400">
