--- a/frontend/src/views/_partials/header.ejs
+++ b/frontend/src/views/_partials/header.ejs
@@ -19,7 +19,7 @@
             <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
                 <a href="/" class="flex items-center">
                     <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">
-                        Gestion Magasin</span>
+                        Gestion Magasin (<%= currentStore?.name %>)</span>
                 </a>
                 <div class="flex items-center lg:order-2">
                     <!--
@@ -29,6 +29,14 @@
                         Get started</a>
                     -->
 
+                    <% if (!isManager) { %>
+                        <a href="/shop/panier" class="inline-flex items-center rounded-lg justify-center p-2 hover:bg-gray-100 dark:hover:bg-gray-700 text-sm font-medium leading-none text-gray-900 dark:text-white">
+                            <svg class="w-5 h-5 lg:me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"/>
+                            </svg>
+                            <span class="hidden sm:flex">Mon panier</span>
+                        </a>
+                    <% } else { %>
                     <button id="dropdownButton" data-dropdown-toggle="dropdownMenu"
                         class="text-white bg-blue-600 hover:bg-blue-700 font-medium rounded-lg text-sm px-4 py-2.5">
                         Services
@@ -66,10 +74,11 @@
                                 Tous les services</a>
                         </div>
                     </div>
+                    <% } %>
 
                     <button id="dropdownButton2" data-dropdown-toggle="dropdownMenu2"
                         class="text-blue-600 bg-white hover:bg-gray-100 font-medium rounded-lg text-sm px-4 py-2.5 ml-2">
-                        <%= currentStore?.name %>
+                        <%= isManager ? currentStore?.name : currentUser?.name %>
                             <svg class="w-4 h-4 ml-2 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M19 9l-7 7-7-7" />
