--- a/frontend/src/views/home.ejs
+++ b/frontend/src/views/home.ejs
@@ -24,6 +24,30 @@
       </div>
     </section>
 
+    <section>
+      <div class="container mx-auto py-8 text-center">
+          <h2 class="text-3xl font-bold underline mb-4">
+            Documentation des services API
+          </h2>
+
+          <a href="/auth/api-docs/" class="inline-flex items-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+            Auth API Docs
+          </a>
+          <a href="/inventory/api-docs/" class="inline-flex items-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+            Inventory API Docs
+          </a>
+          <a href="/products/api-docs/" class="inline-flex items-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+            Products API Docs
+          </a>
+          <a href="/sales/api-docs/" class="inline-flex items-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+            Sales API Docs
+          </a>
+          <a href="/store/api-docs/" class="inline-flex items-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+            Store API Docs
+          </a>
+      </div>
+    </section>
+
   </main>
 
 <%- include('_partials/footer') %>
